add_library(backend STATIC)
target_link_libraries(backend PRIVATE server)
if(HAVE_FT12)
  target_sources(backend PRIVATE ft12.cpp)
endif()
if(HAVE_TPUART)
  target_sources(backend PRIVATE tpuart.cpp ncn5120.cpp)
endif()
if(HAVE_EIBNETIP)
  target_sources(backend PRIVATE eibnetrouter.cpp)
endif()
if(HAVE_EIBNETIPTUNNEL)
  target_sources(backend PRIVATE eibnettunnel.cpp)
endif()
target_sources(backend PRIVATE log.cpp dummy.cpp nat.cpp fqueue.cpp fpace.cpp)
